[project]
name = "flexible-house-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.5.0",
    "datetime>=5.5",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "requests>=2.32.5",
    "ruff>=0.14.5",
    "streamlit>=1.50.0",
]
